@@ -1,5 +1,5 @@
 ;;; dtk-tcl.el --- Interface to TCL speech server --uses module dtk-interp.el
-;;; $Id: dtk-tcl.el,v 1.5 2002/02/05 17:31:40 inoue Exp $
+;;; $Id: dtk-tcl.el,v 1.6 2002/02/06 15:40:29 inoue Exp $
 ;;; $Author: inoue $
 ;;; Description:  Interfacing to the Dectalk via TCL.
 ;;; Keywords: Dectalk, TCL
@@ -8,8 +8,8 @@
 ;;; LCD Archive Entry:
 ;;; emacspeak| T. V. Raman |raman@cs.cornell.edu
 ;;; A speech interface to Emacs |
-;;; $Date: 2002/02/05 17:31:40 $ |
-;;;  $Revision: 1.5 $ |
+;;; $Date: 2002/02/06 15:40:29 $ |
+;;;  $Revision: 1.6 $ |
 ;;; Location undetermined
 ;;;
 
