@@ -1,5 +1,5 @@
 ;;; emacspeak-w3m.el -- speech enable emacs-w3m -- frontend for w3m WEB browser.
-;;;$Id: emacspeak-w3m.el,v 1.4 2001/06/21 23:26:24 mitsugu Exp $
+;;;$Id: emacspeak-w3m.el,v 1.5 2002/02/06 15:40:29 inoue Exp $
 ;;; LCD Archive Entry:
 ;;; emacspeak| T. V. Raman |raman@cs.cornell.edu 
 ;;; A speech interface to Emacs |
@@ -40,8 +40,11 @@
 (defvar emacspeak-w3m-mode-hook nil
   "hook run after entering w3m-mode")
 
-(defvar emacspeak-w3m-fontify-afer-hook nil
+(defvar emacspeak-w3m-fontify-after-hook nil
   "hook run after page is set up")
+
+(defvar emacspeak-w3m-href-personality 'betty
+  "Personality to speak hyperlinks.")
 
 ;;; setting keymap
 (add-hook 'emacspeak-w3m-mode-hook
@@ -50,13 +53,17 @@
 	     (define-key w3m-mode-map "l" 'emacspeak-forward-char)
 )))
 
+(add-hook 'emacspeak-w3m-fontify-after-hook
+	  'emacspeak-w3m-voicify)
+
 ;;{{{ Advise top-level command
 
 (require 'emacspeak-sounds)
 
 (defadvice w3m-next-anchor (around emacspeak pre act)
   "Speak the anchor at distination"
-  (let ((emacspeak-speak-messages nil))
+  (let ((dtk-stop-immediately t)
+	(emacspeak-speak-messages nil))
     ad-do-it)
   (let ((end (next-single-property-change (point) 'w3m-href-anchor)))
     (dtk-speak (buffer-substring (point) end)))
@@ -65,7 +72,8 @@
 
 (defadvice w3m-previous-anchor (around emacspeak pre act)
   "Speak the anchor at distination"
-  (let ((emacspeak-speak-messages nil))
+  (let ((dtk-stop-immediately t)
+	(emacspeak-speak-messages nil))
     ad-do-it)
   (let ((end (next-single-property-change (point) 'w3m-href-anchor)))
     (dtk-speak (buffer-substring (point) end)))
@@ -74,8 +82,7 @@
 
 (defadvice w3m (after emacspeak pre act)
   "speak page title"
-  (dtk-speak w3m-current-title)
-)
+  (dtk-speak w3m-current-title))
 
 (defadvice w3m-find-file (after emacspeak pre act)
   "speak page title"
@@ -117,9 +124,29 @@
   "edit current URL after speak the modeline"
   (emacspeak-speak-mode-line))
 
+(defun emacspeak-w3m-voicify ()
+  (save-excursion
+    (save-match-data
+      (goto-char (point-min))
+      (let ((beg (or (and (get-text-property (point-min) 'w3m-href-anchor)
+			  (point-min))
+		     (next-single-property-change (point-min)
+						  'w3m-href-anchor
+						  nil (point-max)))))
+	(while (< beg (point-max))
+	  (setq end (next-single-property-change beg 'w3m-href-anchor
+						 nil (point-max)))
+	  (message (format "%s %s" beg end))
+	  (when (get-text-property beg 'w3m-href-anchor)
+	    (put-text-property beg end
+			       'personality emacspeak-w3m-href-personality))
+	  (setq beg end))))))
+
 ;;}}}
 
 (add-hook 'w3m-mode-hook '(lambda () (run-hooks 'emacspeak-w3m-mode-hook)))
+(add-hook 'w3m-fontify-after-hook
+	  '(lambda () (run-hooks 'emacspeak-w3m-fontify-after-hook)))
 
 (provide 'emacspeak-w3m)
 
